Styling progress, more!

--- a/SimTECH/SimTECH/Components/CountryFlag.razor
+++ b/SimTECH/SimTECH/Components/CountryFlag.razor
@@ -1,10 +1,10 @@
-﻿<MudText>
+﻿<MudStack Row="true" AlignItems="AlignItems.Center" Class="pa-0">
     <span class="@flagIconClass">@flagIcon</span>
     @if (IncludeName)
     {
-        <span class="ml-2">@flagNationName</span>
+        <MudText Class="ml-2">@flagNationName</MudText>
     }
-</MudText>
+</MudStack>
 
 @code {
     [Parameter]
