--- a/SimTECH/SimTECH/Components/MudTdResult.razor
+++ b/SimTECH/SimTECH/Components/MudTdResult.razor
@@ -1,5 +1,5 @@
 ﻿<MudTd Class="number-col result-cell" Style="@_cellStyles">
-    <MudText Typo="Typo.caption">
+    <MudText Typo="Typo.subtitle1">
         @_resultDisplay
         @if (_hasPole)
         {
