--- a/SimTECH/SimTECH/Pages/Index.razor
+++ b/SimTECH/SimTECH/Pages/Index.razor
@@ -79,9 +79,9 @@
                             <MudTh>Round</MudTh>
                             <MudTh>Race</MudTh>
                             <MudTh Class="pa-0"></MudTh>
-                            <MudTh>Winning driver</MudTh>
+                            <MudTh>Dub driver</MudTh>
                             <MudTh Class="number-col">No.</MudTh>
-                            <MudTh>Winning team</MudTh>
+                            <MudTh>Dub team</MudTh>
                         </HeaderContent>
                         <RowTemplate>
                             <MudTd>
