--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -108,6 +108,11 @@ th {
     width: 800px;
 }
 
+.accent-cell {
+    width: 5px !important;
+    padding: 0px !important;
+}
+
 /* page specific stylings */
 .result-cell {
     border: 0.5px solid black !important;
