--- a/SimTECH/SimTECH/Pages/Index.razor
+++ b/SimTECH/SimTECH/Pages/Index.razor
@@ -28,14 +28,30 @@
         </MudItem>
         <MudItem xs="12" sm="12" md="4">
             <MudPaper Elevation="2" Class="pa-4" Style="height: 300px;">
-                <MudText Typo="Typo.overline">Config</MudText>
-                <MudText Typo="Typo.body2">Sunny engine multiplier: @_config.Value.SunnyEngineMultiplier</MudText>
-                <MudText Typo="Typo.body2">Overcast engine multiplier: @_config.Value.OvercastEngineMultiplier</MudText>
-                <MudText Typo="Typo.body2">Wet engine multiplier: @_config.Value.WetEngineMultiplier</MudText>
-                <MudText Typo="Typo.body2">Rain RNG: @_config.Value.RainAdditionalRNG</MudText>
-                <MudText Typo="Typo.body2">Storm RNG: @_config.Value.StormAdditionalRNG</MudText>
-                <MudText Typo="Typo.body2">Rain reliability: @_config.Value.RainDriverReliabilityModifier</MudText>
-                <MudText Typo="Typo.body2">Storm reliability: @_config.Value.StormDriverReliabilityModifier</MudText>
+                <MudText Typo="Typo.overline">
+                    Config
+                </MudText>
+                <MudText Typo="Typo.body2">
+                    Sunny engine multiplier: @_config.Value.SunnyEngineMultiplier
+                </MudText>
+                <MudText Typo="Typo.body2">
+                    Overcast engine multiplier: @_config.Value.OvercastEngineMultiplier
+                </MudText>
+                <MudText Typo="Typo.body2">
+                    Wet engine multiplier: @_config.Value.WetEngineMultiplier
+                </MudText>
+                <MudText Typo="Typo.body2">
+                    Rain RNG: @_config.Value.RainAdditionalRNG
+                </MudText>
+                <MudText Typo="Typo.body2">
+                    Storm RNG: @_config.Value.StormAdditionalRNG
+                </MudText>
+                <MudText Typo="Typo.body2">
+                    Rain reliability: @_config.Value.RainDriverReliabilityModifier
+                </MudText>
+                <MudText Typo="Typo.body2">
+                    Storm reliability: @_config.Value.StormDriverReliabilityModifier
+                </MudText>
             </MudPaper>
         </MudItem>
         <MudItem xs="12" sm="6">
@@ -45,7 +61,9 @@
                         <MudText Typo="Typo.h5">Examples</MudText>
                         <div>
                             <!-- Local storage value -->
-                            <MudButton Variant="Variant.Text" Color="Color.Primary" OnClick="SetExample">Set store</MudButton>
+                            <MudButton Variant="Variant.Text" Color="Color.Primary" OnClick="SetExample">
+                                Set store
+                            </MudButton>
                             <MudText>@exampleStore</MudText>
                         </div>
                         <MudStack Row="true">
