--- a/SimTECH/SimTECH/Pages/Racing/Qualifying.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Qualifying.razor
@@ -17,20 +17,18 @@ else
             *@
             <MudTable Items="@DriversInQ1.OrderBy(e => e.PositionQ1)" id="q1-result-table">
                 <ToolBarContent>
-                    <MudText Typo="Typo.h6">
-                        @Model.Name - QUALIFYING Q1
+                    <MudStack Row="true" AlignItems="AlignItems.Center" Class="mud-width-full">
                         <CountryFlag Code="@Model.Country" />
-                    </MudText>
-
-                    <MudSpacer />
-
-                    <MudButtonGroup Variant="Variant.Outlined">
-                        <ScreenshotButton TargetId="q1-result-table" />
-                        @if (advancedQ1 != Model.AmountRuns)
-                        {
-                            <MudButton OnClick="AdvanceQ1">Advance</MudButton>
-                        }
-                    </MudButtonGroup>
+                        <MudText Typo="Typo.h6">@Model.Name - QUALIFYING Q1</MudText>
+                        <MudSpacer />
+                        <MudButtonGroup Variant="Variant.Outlined">
+                            <ScreenshotButton TargetId="q1-result-table" />
+                            @if (advancedQ1 != Model.AmountRuns)
+                            {
+                                <MudButton OnClick="AdvanceQ1">Advance</MudButton>
+                            }
+                        </MudButtonGroup>
+                    </MudStack>
                 </ToolBarContent>
                 <HeaderContent>
                     <MudTh>#</MudTh>
@@ -91,18 +89,18 @@ else
             {
                 <MudTable Items="@DriversInQ2.OrderBy(e => e.PositionQ2)" id="q2-result-table">
                     <ToolBarContent>
-                        <MudText Typo="Typo.h6">
+                        <MudStack Row="true" AlignItems="AlignItems.Center" Class="mud-width-full">
                             <CountryFlag Code="@Model.Country" />
-                            @Model.Name - QUALIFYING Q2
-                        </MudText>
-                        <MudSpacer />
-                        <MudButtonGroup Variant="Variant.Outlined">
-                            <ScreenshotButton TargetId="q2-result-table" />
-                            @if (advancedQ1 != Model.AmountRuns)
-                            {
-                                <MudButton OnClick="AdvanceQ2">Advance</MudButton>
-                            }
-                        </MudButtonGroup>
+                            <MudText Typo="Typo.h6">@Model.Name - QUALIFYING Q2</MudText>
+                            <MudSpacer />
+                            <MudButtonGroup Variant="Variant.Outlined">
+                                <ScreenshotButton TargetId="q2-result-table" />
+                                @if (advancedQ2 != Model.AmountRuns)
+                                {
+                                    <MudButton OnClick="AdvanceQ2">Advance</MudButton>
+                                }
+                            </MudButtonGroup>
+                        </MudStack>
                     </ToolBarContent>
                     <HeaderContent>
                         <MudTh>#</MudTh>
@@ -164,24 +162,22 @@ else
             {
                 <MudTable Items="@DriversInQ3.OrderBy(e => e.PositionQ3)" id="q3-result-table">
                     <ToolBarContent>
-                        <MudText Typo="Typo.h6">
+                        <MudStack Row="true" AlignItems="AlignItems.Center" Class="mud-width-full">
                             <CountryFlag Code="@Model.Country" />
-                            @Model.Name - QUALIFYING Q3
-                        </MudText>
-
-                        <MudSpacer />
-                        
-                        <MudButtonGroup Variant="Variant.Outlined">
-                            <ScreenshotButton TargetId="q3-result-table" />
-                            @if (advancedQ3 == Model.AmountRuns)
-                            {
-                                <MudButton Variant="Variant.Outlined" OnClick="Finish">Finish</MudButton>
-                            }
-                            else
-                            {
-                                <MudButton Variant="Variant.Outlined" OnClick="AdvanceQ3">Advance</MudButton>
-                            }
-                        </MudButtonGroup>
+                            <MudText Typo="Typo.h6">@Model.Name - QUALIFYING Q3</MudText>
+                            <MudSpacer />
+                            <MudButtonGroup Variant="Variant.Outlined">
+                                <ScreenshotButton TargetId="q3-result-table" />
+                                @if (advancedQ3 == Model.AmountRuns)
+                                {
+                                    <MudButton Variant="Variant.Outlined" OnClick="Finish">Finish</MudButton>
+                                }
+                                else
+                                {
+                                    <MudButton Variant="Variant.Outlined" OnClick="AdvanceQ3">Advance</MudButton>
+                                }
+                            </MudButtonGroup>
+                        </MudStack>
                     </ToolBarContent>
                     <HeaderContent>
                         <MudTh>#</MudTh>
