--- a/SimTECH/SimTECH/Pages/Season/AddEntrantsWizard.razor
+++ b/SimTECH/SimTECH/Pages/Season/AddEntrantsWizard.razor
@@ -176,10 +176,10 @@
                                             <MudTextField @bind-Value="@context.Principal" Required />
                                         </MudTd>
                                         <MudTd DataLabel="Colour">
-                                            <MudColorPicker @bind-Text="@context.Colour" DisableAlpha="true" Required />
+                                            <MudColorPicker @bind-Text="@context.Colour" DisableAlpha="true" />
                                         </MudTd>
                                         <MudTd DataLabel="Accent">
-                                            <MudColorPicker @bind-Text="@context.Accent" DisableAlpha="true" Required />
+                                            <MudColorPicker @bind-Text="@context.Accent" DisableAlpha="true" />
                                         </MudTd>
                                         <MudTd DataLabel="Base">
                                             <MudNumericField @bind-Value="@context.BaseValue" />
