--- a/SimTECH/SimTECH/wwwroot/css/site.css
+++ b/SimTECH/SimTECH/wwwroot/css/site.css
@@ -34,7 +34,7 @@
 
 html, body {
     font-family: NovaRegular;
-    font-size: 18px;
+    font-size: 22px;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -72,6 +72,8 @@ th {
     border-radius: 50%;
     text-align: center;
     font-size: 0.9em;
+    font-family: F1Bold;
+    line-height: 1.15;
 }
 
 .number-col {
@@ -111,6 +113,10 @@ th {
 .accent-cell {
     width: 5px !important;
     padding: 0px !important;
+}
+
+.text-center {
+    text-align: center;
 }
 
 /* page specific stylings */
