--- a/SimTECH/SimTECH/Pages/Racing/Practice.razor
+++ b/SimTECH/SimTECH/Pages/Racing/Practice.razor
@@ -12,24 +12,22 @@ else
     <MudContainer>
         <MudTable Items="@Model.PracticeDrivers.OrderBy(e => e.Position)" id="practice-table">
             <ToolBarContent>
-                <MudText Typo="Typo.h6">
-                    @Model.Name - PRACTICE
+                <MudStack Row="true" AlignItems="AlignItems.Center" Class="mud-width-full">
                     <CountryFlag Code="@Model.Country" />
-                </MudText>
-
-                <MudSpacer />
-
-                <MudButtonGroup Variant="Variant.Outlined">
-                    <ScreenshotButton TargetId="practice-table" />
-                    @if (advancedRuns == Model.AmountRuns)
-                    {
-                        <MudButton OnClick="Finish">Finish</MudButton>
-                    }
-                    else
-                    {
-                        <MudButton OnClick="Advance">Advance</MudButton>
-                    }
-                </MudButtonGroup>
+                    <MudText Typo="Typo.h6">@Model.Name - PRACTICE</MudText>
+                    <MudSpacer />
+                    <MudButtonGroup Variant="Variant.Outlined">
+                        <ScreenshotButton TargetId="practice-table" />
+                        @if (advancedRuns == Model.AmountRuns)
+                        {
+                            <MudButton OnClick="Finish">Finish</MudButton>
+                        }
+                        else
+                        {
+                            <MudButton OnClick="Advance">Advance</MudButton>
+                        }
+                    </MudButtonGroup>
+                </MudStack>
             </ToolBarContent>
             <HeaderContent>
                 <MudTh>#</MudTh>
