adding multiple races wowow

--- a/SimTECH/SimTECH/Pages/Leagues/LeagueEditor.razor
+++ b/SimTECH/SimTECH/Pages/Leagues/LeagueEditor.razor
@@ -1,7 +1,8 @@
 ﻿<MudDialog>
     <TitleContent>
         <MudText>Modify league</MudText>
-        <MudText>Keep in mind that race length is used to determine the amount of calcuations each race,
+        <MudText>
+            Keep in mind that race length is used to determine the amount of calcuations each race,
             which is why we round to 10 since every ten decimals amounts to one additional calculation.
         </MudText>
     </TitleContent>
