--- a/SimTECH/SimTECH/Pages/Setup/Tracks.razor
+++ b/SimTECH/SimTECH/Pages/Setup/Tracks.razor
@@ -55,6 +55,9 @@
                 <MudText>@context.Item.Name</MudText>
             </MudPaper>
         </ChildRowContent>
+        <PagerContent>
+            <MudDataGridPager T="Track" />
+        </PagerContent>
     </MudDataGrid>
 </MudContainer>
 
