Tried to be smart, failed!

--- a/SimTECH/SimTECH/Pages/Index.razor
+++ b/SimTECH/SimTECH/Pages/Index.razor
@@ -57,7 +57,7 @@
         <MudItem xs="12" sm="6">
             <MudGrid>
                 <MudItem xs="12">
-                    <MudPaper Elevation="2" Class="pa-4" Style="height: 300px;">
+                    <MudPaper Elevation="2" Class="pa-4" Style="height: 200px;">
                         <MudText Typo="Typo.h5">Examples</MudText>
                         <div>
                             <!-- Local storage value -->
@@ -78,7 +78,21 @@
                     </MudPaper>
                 </MudItem>
                 <MudItem xs="12">
-                    <MudPaper Elevation="2" Class="pa-4" Style="height: 300px;"></MudPaper>
+                    <MudPaper Elevation="2" Class="pa-4" Style="height: 200px">
+                        <MudProgressLinear Value="50"
+                                           Min="0"
+                                           Max="100"
+                                           Size="Size.Medium"
+                                           Color="Color.Default"
+                                           Class="my-2" />
+
+                        <BobProgressLinear Colour="#16f5e2"
+                                           Value="50"
+                                           Min="0"
+                                           Max="100"
+                                           Size="Size.Medium"
+                                           Class="my-2" />
+                    </MudPaper>
                 </MudItem>
             </MudGrid>
         </MudItem>
